Updated the readme file ..

--- a/libxml/README
+++ b/libxml/README
@@ -12,7 +12,7 @@ pain of implementing non-trivial SAX input handlers. The original
 code of these classes had been written by Peter Becker for the
 JCommon library.
 
-LibXML replaces the JCommon classes, which were not namespace aware.
+LibXML replaces the JCommon-XML classes, which were not namespace aware.
 Due to JCommons frozen API, namespace awareness could not be added to
 the original code without creating a mess.
 
@@ -20,4 +20,43 @@ For the latest news and information about libXML, please refer to:
 
     http://jfreereport.pentaho.org/libxml/
 
+2. SUPPORT
+----------
+Free support is available via the JFreeReport forum, follow the link
+from the JFreeReport home page.  Please note that questions are
+answered by volunteers, so there is no guaranteed response time or
+level of service.
+
+Please avoid e-mailing the developers directly for support questions.
+If you post a message in the forum, then everyone can see the
+question, and everyone can see the answer.
+
+
+3. REPORTING BUGS
+-----------------
+If you find bugs in JFreeReport, we'd like to hear about it so that we
+can improve future releases of JFreeReport.  Please post a bug report
+at the JFreeReport project page on SourceForge:
+
+    http://sourceforge.net/projects/jfreereport
+
+Please be sure to provide as much information as you can.  We need to
+know the version of JFreeReport that you are using, the JDK version,
+and the steps required to replicate the bug.  Include any other
+information that you think is relevant.
+
+
+4. ANT
+------
+We use an open source build tool called Ant to build JFreeReport.  An
+Ant script (tested using Ant 1.6) is included in the distribution:
+
+    <libfonts-directory>/ant/build.xml
+
+You can find out more about Ant at:
+
+    http://ant.apache.org/
+
+Ant is licensed under the terms of the Apache Software License (a
+popular open source software license).
 
