providing a link to the forums ..

--- a/libxml/README
+++ b/libxml/README
@@ -60,3 +60,10 @@ You can find out more about Ant at:
 Ant is licensed under the terms of the Apache Software License (a
 popular open source software license).
 
+
+5. OTHER FEEDBACK
+-----------------
+For other feedback and comments, please post a message on the
+Pentaho forums. The Forum is available at
+
+  http://forums.pentaho.org/
