Library update and readme ..

--- a/libfonts/README
+++ b/libfonts/README
@@ -31,6 +31,10 @@ Please avoid e-mailing the developers directly for support questions.
 If you post a message in the forum, then everyone can see the
 question, and everyone can see the answer.
 
+The forum is available at
+
+  http://forums.pentaho.org/
+  
 
 3. REPORTING BUGS
 -----------------
@@ -73,6 +77,6 @@ be found in the public CVS at sourceforge as well.
 6. OTHER FEEDBACK
 -----------------
 For other feedback and comments, please post a message on the
-JFreeReport forum. The Forum is available at
+Pentaho forums. The Forum is available at
 
-  http://www.jfree.org/phpBB2/viewforum.php?f=8
+  http://forums.pentaho.org/
