--- a/libfonts/README
+++ b/libfonts/README
@@ -11,19 +11,19 @@ of the GNU Lesser General Public License (see license-LGPL.txt for
 details).  JFreeReport is developed by Thomas Morgner, David Gilbert
 and others.
 
-For the latest news and information about JFreeReport, please refer to:
-
-    http://jfreereport.pentaho.org/libfonts
-
 LibFonts is a library developed to support advanced layouting in JFreeReport.
 This library allows to read TrueType-Font files to extract layouting specific
 informations.
+
+For the latest news and information about LibFonts, please refer to:
+
+    http://jfreereport.pentaho.org/libfonts
 
 
 2. SUPPORT
 ----------
 Free support is available via the JFreeReport forum, follow the link
-from the JFreeReport home page.  Please note that questions are
+from the LibFonts home page.  Please note that questions are
 answered by volunteers, so there is no guaranteed response time or
 level of service.
 
@@ -38,21 +38,21 @@ The forum is available at
 
 3. REPORTING BUGS
 -----------------
-If you find bugs in JFreeReport, we'd like to hear about it so that we
-can improve future releases of JFreeReport.  Please post a bug report
-at the JFreeReport project page on SourceForge:
+If you find bugs in LibFonts, we'd like to hear about it so that we
+can improve future releases of LibFonts.  Please post a bug report
+at the LibFonts project page on SourceForge:
 
     http://sourceforge.net/projects/jfreereport
 
 Please be sure to provide as much information as you can.  We need to
-know the version of JFreeReport that you are using, the JDK version,
+know the version of LibFonts that you are using, the JDK version,
 and the steps required to replicate the bug.  Include any other
 information that you think is relevant.
 
 
 4. ANT
 ------
-We use an open source build tool called Ant to build JFreeReport.  An
+We use an open source build tool called Ant to build LibFonts.  An
 Ant script (tested using Ant 1.6) is included in the distribution:
 
     <libfonts-directory>/ant/build.xml
