--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -2,6 +2,11 @@
 1.  WHAT's NEW
 ---------------
 A list of changes in recent versions:
+0.9.0-02  (25-Jan-2006)
+        * [BUG] Thousands of bugs fixed, which caused weird crashes everywhere.
+
+        * Bean-DataSources and SQL-DataSources aligned with the 0.8 codeline. 
+
 0.9.0-01  (11-Dec-2006)
         * [BUG] The ZIP-HTML-Dialog crashed due to an invalid resource reference.
 
