--- a/libformula/ChangeLog.txt
+++ b/libformula/ChangeLog.txt
@@ -5,7 +5,9 @@ A list of changes in recent versions:
 
 0.1.3  (25-Jan-2007)
         * [BUG] The power operator was not registered.
-        
+
+        * [BUG] The 'minus' prefix operator did not work.
+
         * New functions added
           Text:
           - LEFT(text[,length=1])
@@ -20,7 +22,7 @@ A list of changes in recent versions:
           - TRIM(text)
           - UPPER(text)
           - URLENCODE(text[,encoding])
-          
+
           Information:
           - NA
           - ISNA(value)
@@ -33,14 +35,14 @@ A list of changes in recent versions:
 0.1.2: (22-Dec-2006)
         * [BUG] The parser failed when being faced with functions that have
           no parameters.
-          
+
         * New function NULL allows to return a NULL-reference.
-	
+
         * Added the 'ISBLANK' function from OpenFormula.
 
 0.1.1: (11-Dec-2006)
         * The FormulaContext now is able to signal errors using Exceptions.
-        
+
           The ToDo list has grown a bit after studying the holy books of
           Formula-computation. Version 0.2 will see some major internal API
           changes.
