Comparator fix: ANY-type objects have to be converted to be comparable ..

--- a/libformula/ChangeLog.txt
+++ b/libformula/ChangeLog.txt
@@ -4,7 +4,8 @@
 A list of changes in recent versions:
 
 0.1.5: (07-Mar-2007)
-        * Exposed some variables to allow proper inspection of formulas.
+        * Exposed some previously private variables to allow proper inspection
+          of formulas.
 
 0.1.4: (01-Mar-2007)
         * [BUG] The parser did not accept empty parameters so that syntactilly 
