--- a/libfonts/ChangeLog
+++ b/libfonts/ChangeLog
@@ -3,6 +3,12 @@
 ---------------
 A list of changes in recent versions:
 
+0.2.4: (27-Apr-2007)
+        * Added Font-Metrics caching to the AWT-FontMetrics for ASCII and ISO-8859-1
+          characters.
+          
+        * Moved the Text-Classifiers implementations from LibLayout into LibFonts.
+
 0.2.3: (01-Mar-2007)
         * LibLoader changed the way resource-keys are managed.
 
