--- a/libxml/ChangeLog
+++ b/libxml/ChangeLog
@@ -3,6 +3,14 @@
 ---------------
 A list of changes in recent versions:
 
+0.9.4: (21-May-2007)
+    * Added support for streaming large Chunks of character-data using a
+      java.io.Reader. This avoids the creation of temporary strings and reduces
+      the memory footprint in some cases.
+      
+    * Added a way to directly parse an XML document without the need to go
+      through LibLoader's interfaces.
+
 0.9.3: (27-Apr-2007)
     * [BUG] AttributeList.removeAttribute(..) did not work at all.
 
