--- a/librepository/ChangeLog
+++ b/librepository/ChangeLog
@@ -3,5 +3,8 @@
 ---------------
 A list of changes in recent versions:
 
+0.1.1: (27-May-2007)
+    * Added a mime-type mapping for CSS-files. Mime-Mapping should be configurable.
+    
 0.1.0: (03-Dec-2006)
     * Initial version.
