Build file upgrades

--- a/jfreereport-ext/ChangeLog
+++ b/jfreereport-ext/ChangeLog
@@ -2,65 +2,6 @@
 1.  WHAT's NEW
 ---------------
 A list of changes in recent versions:
-0.8.7:
-  * Fixes in the build process. The module files created by the ANT script
-    did not contain the jFreereport-ext.properties file, and thus JFreeReport
-    never picked them up.
 
-0.8.6-6:
-  * SVG-Image support added. This library requires Java 1.4. 
-
-0.8.6-2:
-  * [BUG] The ServletDemo was not able to find the XML report definition file.
-
-0.8.6: (21-Sep-2005):
-  * [BUG] The ImageIO module was not initialized properly.
-
-  * The JDK 1.4 printing has been redesigned. Now the report page definition
-    properties get fully mapped into IPP-properties.
-
-0.8.5-5: (04-Mar-2005)
-  * New Chart-Demo shows how to print multiple charts in a single report.
-
-0.8.5: (04-Mar-2005)
-  * Experimental barcode classes.
-
-  * The servlet demo has been update to demonstrate the use of URLImageReferences.
-
-  * The chart demo now uses the latest JFreeChart jar.
-
-0.8.4-5: (1-Nov-2003):
-	* The JDK1.4-Printing is more configurable now. The appearance in the menus of the
-	  preview components can be redefined.
-
-  * A new demo shows the use of the DrawableElement to display JFreeCharts.
-	  Better support for charts will be implemented after version 0.8.5
-
-0.8.4-4: (1-Nov-2003):
-	* Removed obsolete test classes
-
-0.8.4: (19-Oct-2003) :
-  * BugFix: Java1.4 printing did not show the progress monitor.
-  
-  * Warning: Java1.4 printing does not accept changes of the 
-    pageformat or the borders and will not show the number of pages
-    of the report yet. 
-
-0.8.2: (12-Apr-2003) :
-  * Nothing new, just a release to keep in sync with the main project.
-
-0.8.1_01: (04-Mar-2003) :
-
-  * This is the initial official version of the extension project
-  
-  * Added a WebApplication to show how to use JFreeReport in a Servlet 
-    environment
-    
-  * Added a Java1.4 log target
-  
-
-23-Jun-2002: 
-  * JUnit Test added to the extension project
-	
-  * Log4J-LogTarget added
-
+0.9.0-01: (25-Jan-2007)
+        * Hibernate datasource added.    
