--- a/libxml/ChangeLog
+++ b/libxml/ChangeLog
@@ -3,6 +3,9 @@
 ---------------
 A list of changes in recent versions:
 
+0.9.6: (24-Jun-2007)
+    * [BUG] CharacterEntities for newline and linefeed characters were wrong.
+
 0.9.5: (27-May-2007)
     * Added an HTML-Compatibility mode, so that short empty tags have a space before
       close-marker.
